--- a/finora_ai/app/globals.css
+++ b/finora_ai/app/globals.css
@@ -123,10 +123,12 @@
 
 @layer utilities {
   .gradient {
-    @apply bg-gradient-to-br from-blue-600 to-purple-600;
+    @apply bg-linear-to-br from-blue-600 to-purple-600;
   }
 
   .gradient-title {
     @apply gradient font-extrabold tracking-tighter pr-2 pb-2 text-transparent bg-clip-text;
   }
 }
+
+
